# the_silent_cartographer

./: .gitignore  README.md  config.env.example  profile.example.md  pyproject.toml  template.md
docs/content/: README.md  linkedin-post.md  talking-points.md  youtube-short-script.md  youtube-video-outline.md
tests/: __init__.py  test_generators.py  test_memory.py  test_parser.py
tsc/: __init__.py  __main__.py  cli.py  config.py
tsc/generators/: __init__.py  book_note.py  concept_note.py  template_filler.py
tsc/integrations/: __init__.py  anthropic_client.py  asana_client.py  email_client.py  llm_client.py  semantic_search.py
tsc/memory/: __init__.py  tracker.py
tsc/parsers/: __init__.py  kindle_html.py  models.py
tsc/processors/: __init__.py  action_extractor.py  concept_extractor.py  highlight_router.py
